a lot of changed - css: font variables - css: fixed max page width - css: align h1 center - css: added .author, .abstract, kbd, samp and scrollbar classes - impress uses proper font - renamed essay template files - template.md is now an useful guide

--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500&family=Open+Sans:wght@300;500&display=swap');
-:root { --txt: #333; --bg: #fff; --cbg: #eee; --acc-foc: #19a35e; --acc: #14824b; --txt-l: #777; --footer-i1: "🌲"; --footer-i2: "💚"; }
+:root { --txt: #333; --bg: #fff; --cbg: #eee; --acc-foc: #19a35e; --acc: #14824b; --txt-l: #777; --footer-i1: "🌲"; --footer-i2: "💚"; 
+        --font-n: 'open sans', sans-serif; --font-m: 'fira mono', monospace; }
 html[data-theme="eup"] { --acc: #201F61; --acc-foc: #b59cde; --footer-i1: "🍇"; --footer-i2: "💜"; }
 html[data-theme="mds"] { --acc: #73323c; --acc-foc: #c29774; --footer-i1: "🍁"; --footer-i2: "🧡"; }
 body { margin: 0; padding: 0; border: 0;
-  font: 300 1.25rem 'open sans', sans-serif;
+  font: 300 1.25rem var(--font-n);
   color: var(--txt); background: var(--bg); }
-main { width: clamp(320px, 100%, 650px); margin: 0 auto; padding: 0 40px; }
+main { width: clamp(320px, 85%, 650px); margin: 0 auto; padding: 0 40px; }
 h1, h2, h3, h4, h5, h6 { font-weight: 500; margin-bottom: 20px; }
-h1 { font-size: 4rem; }
+h1 { font-size: 4rem; text-align: center; }
 h2 { font-size: 2rem; margin-top: 50px; }
 h3 { font-size: 1.8rem; }
 h4 { font-size: 1.7rem; }
@@ -22,7 +23,16 @@ span#rq, small#c { font-size: 0.7rem; }
 small { color: var(--txt-l);}
 ul { list-style-type: circle; }
 ol { list-style-type: decimal-leading-zero; }
-code, pre { font-family: 'fira mono', monospace; background: var(--cbg); }
-#logo { font-family: 'fira mono', monospace; font-weight: 300; }
+code, pre { font: 300 1rem var(--font-m); background: var(--cbg); overflow-x: auto; }
+#logo { font-family: var(--font-m); font-weight: 300; }
 .c-paren { color: var(--acc-foc); font-weight: 500; }
 .c-fn { color: var(--acc); font-weight: 500; }
+.author { margin: 0.85rem 0; font-variant-caps: small-caps; text-align: center; }
+.abstract { margin: 2.25rem 0; }
+.abstract, .abstract p { text-align: center; margin-top: 0; }
+kbd { font-family: var(--font-m); border: 1px solid #777; border-radius: 2px; padding: 2px 4px; font-size: 0.75rem; }
+samp { font-family: var(--font-m); }
+::-webkit-scrollbar { width: 8px; }
+::-webkit-scrollbar-track { background: #eee; }
+::-webkit-scrollbar-thumb { background: var(--acc); border-radius: 4px; }
+::-webkit-scrollbar-thumb:hover { background: var(--acc-foc); }
